--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* This is important for the smooth scrolling from the navbar */
+html {
+  scroll-behavior: smooth;
 }
